
2004/06/16: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/db: added function GWEN_DB_InsertGroup
- m4/os.m4: Define OS_POSIX if running on a POSIX system
- os/posix/libloader: 
  improved library loading. Now the following order is used when loading
  a library:
  1) the name given
  2) the name given plus ".so"
  3) the name given with prefix "lib"
  4) the name given with prefix "lib" and ".so"
  This now allows for files without ".so" to be loaded.
  

2004/06/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc.c: added GWEN_IPCManager_Attach() and usage counter


2004/06/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/db: increased size of the word buffer used (I'm still looking
  for a better solution. Maybe I will write a DBIO which reads/writes DB as
  XML files...)


2004-06-07  Christian Stimming <stimming@tuhh.de>

	* src/crypt/none/cryptnone.c: Fix function prototype SSL_new.


2004/06/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc: fixed a bug (did not take node id into account when assigning a
  response to a request)


===========================================================================
MARK: released gwenhywfar-0.9.11 (2004/06/06)
===========================================================================


2004/06/04: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/idlist.c: fixed another stupid bug


2004/06/03: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- os/gwentime: added function to retrieve the time in milliseconds
- base/idlist: fixed two severe bugs
- crypt/ossl/nettransportssl: added functions to retrieve the peer certificate
- parser/text: improved BCD reading


2004/06/02: Martin Preuss<martin@libchipcard.de>